2007-11-19  Andy Wingo  <wingo@pobox.com>

	* flumotion/common/config.py (exportPlanetXml): Remove a print.
	Thanks Arek.

	* flumotion/manager/manager.py (Vishnu.getConfiguration): Call the
	new exportPlanetXml with the whole planet state -- makes it so
	that you can always export a manager's configuration, regardless
	of how the manager got configured that way.
	(Vishnu.loadComponentConfigurationXML): Don't hold onto the
	configuration object, it's unnecessary.

	* flumotion/common/fxml.py (sxml2unicode, SXML): Code to write
	XML as s-expressions. See exportPlanetXml for a use example.

	* flumotion/common/config.py (CURRENT_VERSION): Remove duplicate
	and incorrect definition; the real one is later in the file.
	(BaseConfigParser.export): Removed, no longer used.
	(exportPlanetXml): New function, takes a planet state and makes
	XML out of it. Nifty, and somewhat evil.

2007-11-19  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/wizard.py:
	Reorganize, group the methods by their type. Remove unused
	API.

2007-11-19  Johan Dahlin  <johan@gnome.org>

	* data/glade/wizard_tvcard.glade:
	* flumotion/wizard/steps.py:
	Unbreak the non-testsource video producers.
	Fix two typos.
	(FireWireAudioStep): Move down _get_width_height to have a similar
	order to the firewire video step. *args -> checkbutton

2007-11-19  Johan Dahlin  <johan@gnome.org>
	
	* flumotion/wizard/steps.py: 
	Store instance variables in the instances instead of in classes, 
	really. Also mark them as private.
	(VideoEncoderStep.__init__): Re-order the video/audio steps
	Add section comments and group the methods by their type.
	Mark a few more methods as private

2007-11-19  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/steps.py (ConsumptionStep.activated): improve
	comment
	(ConsumptionStep.get_next): Refactor a bit and sort out my 
	misunderstanding of the audio/video only code paths. 
	Add comments explaining what's going on here, since it's non-obvious
	at a first glance.
