@@ -26,14 +26,16 @@ import sets
 import gtk
 import gtk.gdk
 import gtk.glade
+from twisted.internet import defer
 
 from flumotion.configure import configure
-from flumotion.common import log, pygobject, messages
+from flumotion.common import errors, log, pygobject, messages
 from flumotion.common.pygobject import gsignal
 from flumotion.common.messages import N_, ngettext
-from flumotion.wizard import save, step, classes
+from flumotion.wizard import save, classes
 from flumotion.wizard.models import Flow
-from flumotion.ui.glade import GladeWindow
+from flumotion.ui import fgtk
+from flumotion.ui.glade import GladeWidget, GladeWindow
 
 T_ = messages.gettexter('flumotion')
 
@@ -48,6 +50,171 @@ class Sections(classes.KeyedList):
     def __init__(self, *args):
         classes.KeyedList.__init__(self, *args)
         self.add_key(str, lambda x: x.section)
+
+
+class WizardStep(GladeWidget, log.Loggable):
+    glade_typedict = fgtk.WidgetMapping()
+
+    # set by subclasses
+    name = None
+    section = None
+    icon = 'placeholder.png'
+
+    # optional
+    sidebar_name = None
+    has_worker = True
+
+    # set by Wizard when going through steps
+    visited = False
+    worker = None
+
+    def __init__(self, wizard):
+        """
+        @param wizard: the wizard this step is a part of
+        @type  wizard: L{Wizard}
+        """
+        GladeWidget.__init__(self)
+        self.set_name(self.name)
+        if not self.sidebar_name:
+            self.sidebar_name = self.name
+        self.wizard = wizard
+        self.setup()
+
+    def __repr__(self):
+        return '<WizardStep object %r>' % self.name
+
+    # returns a new dict. is this necessary?
+    def get_state(self):
+        state_dict = {}
+        for w in self._iterate_widgets():
+            if hasattr(w, 'get_state') and w != self:
+                # only fgtk widgets implement get_state
+                # every widget that implements get_state automatically becomes
+                # a property
+                # spinbutton_some_property -> some-property
+                name = '-'.join(w.get_name().split('_'))
+                key = name.split('-', 1)[1]
+                state_dict[key] = w.get_state()
+
+        return state_dict
+
+    def clear_msg(self, *args, **kwargs):
+        self.wizard.clear_msg(*args, **kwargs)
+
+    def add_msg(self, msg):
+        self.debug('adding message %r' % msg)
+        self.wizard.add_msg(msg)
+
+    # FIXME: maybe add id here for return messages ?
+    def workerRun(self, module, function, *args, **kwargs):
+        """
+        Run the given function and arguments on the selected worker.
+
+        @returns: L{twisted.internet.defer.Deferred}
+        """
+        self.debug('workerRun(module=%r, function=%r)' % (module, function))
+        admin = self.wizard.get_admin()
+        worker = self.worker
+
+        if not admin:
+            self.warning('skipping workerRun, no admin')
+            return defer.fail(errors.FlumotionError('no admin'))
+
+        if not worker:
+            self.warning('skipping workerRun, no worker')
+            return defer.fail(errors.FlumotionError('no worker'))
+
+        d = admin.workerRun(worker, module, function, *args, **kwargs)
+
+        def callback(result):
+            self.debug('workerRun callbacked a result')
+            self.clear_msg(function)
+
+            if not isinstance(result, messages.Result):
+                msg = messages.Error(T_(
+                    N_("Internal error: could not run check code on worker.")),
+                    debug=('function %r returned a non-Result %r'
+                           % (function, result)))
+                self.add_msg(msg)
+                raise errors.RemoteRunError(function, 'Internal error.')
+
+            for m in result.messages:
+                self.debug('showing msg %r' % m)
+                self.add_msg(m)
+
+            if result.failed:
+                self.debug('... that failed')
+                raise errors.RemoteRunFailure(function, 'Result failed')
+            self.debug('... that succeeded')
+            return result.value
+
+        def errback(failure):
+            self.debug('workerRun errbacked, showing error msg')
+            if failure.check(errors.RemoteRunError):
+                debug = failure.value
+            else:
+                debug = "Failure while running %s.%s:\n%s" % (
+                    module, function, failure.getTraceback())
+
+            msg = messages.Error(T_(
+                N_("Internal error: could not run check code on worker.")),
+                debug=debug)
+            self.add_msg(msg)
+            raise errors.RemoteRunError(function, 'Internal error.')
+
+        d.addErrback(errback)
+        d.addCallback(callback)
+        return d
+
+    # Required vmethods
+
+    def get_next(self):
+        """Called when the user presses next in the wizard.
+        @returns: name of next step or next_step instance
+        @rtype:  string or an L{WizardStep} instance
+        """
+        raise NotImplementedError
+
+    # Optional vmethods
+    def setup(self):
+        """This is called after the step is constructed, to be able to
+        do some initalization time logic in the steps."""
+
+    def activated(self):
+        """Called just before the step is shown, so the step can
+        do some logic, eg setup the default state"""
+
+    def deactivated(self):
+        """Called after the user pressed next"""
+
+    def before_show(self):
+        """This is called just before we show the widget, everything
+        is created and in place"""
+
+    def worker_changed(self):
+        pass
+
+    # Private API
+
+    def _iterate_widgets(self):
+        # depth-first
+        def iterator(w):
+            if isinstance(w, gtk.Container):
+                for c in w.get_children():
+                    for cc in iterator(c):
+                        yield cc
+            yield w
+        return iterator(self)
+
+
+class WizardSection(WizardStep):
+    def __init__(self, *args):
+        if not self.name:
+            self.name = self.section
+        WizardStep.__init__(self, *args)
+
+    def __repr__(self):
+        return '<WizardSection object %s>' % self.name
 
 
 class Scenario:
@@ -98,7 +265,7 @@ class Scenario:
             except KeyError:
                 raise TypeError("%r: Wizard step %s is missing" % (
                     self, next))
-        elif isinstance(next, step.WizardStep):
+        elif isinstance(next, WizardStep):
             next_step = next
             if not next_step in self.steps:
                 self.steps.append(next_step)
@@ -168,9 +335,9 @@ class BasicScenario(Scenario):
         for k in dir(steps):
             v = getattr(steps, k)
             try:
-                if issubclass(v, step.WizardSection):
+                if issubclass(v, WizardSection):
                     pass
-                elif issubclass(v, step.WizardStep) and v.name:
+                elif issubclass(v, WizardStep) and v.name:
                     self.add_step(v)
             except TypeError:
                 pass
